--- a/star_ecommerce/web-tinhocngoisao/wp-content/themes/online-shop-child/private/scss/_pdp.scss
+++ b/star_ecommerce/web-tinhocngoisao/wp-content/themes/online-shop-child/private/scss/_pdp.scss
@@ -524,6 +524,7 @@
                 top: 0;
                 @media screen and(min-width: 1024px) {
                     display: inline-block;
+                    margin-top: 10px;
                 }
                 ul {
                     li {
